# Rust-Tin-Language

./: .travis.yml  Cargo.toml  README.md  build_web.cmd
benches/: benchmarks.rs
src/: interpreter.rs  lib.rs  main.rs  parallelism.rs  simd.rs  stdfuncs.rs  tests.rs  wrappers.rs
tests/: integration_tests.rs
