[package]
name = "tin"
version = "0.1.0"
authors = ["Gabie <jacadel1998@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
rand = "*"
num_cpus = "*"
lazy_static = "*"
rayon = "*"

[features]
default = []
parallelism = []

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false