[package]
name = "tin"
version = "0.1.0"
authors = ["Gabie <jacadel1998@hotmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.84"
regex = "1"
rand = "*"
num_cpus = "*"
lazy_static = "*"
rayon = "*"
getrandom = { version = "0.2", features = ["js"] }
wide = "0.7.8"

[features]
default = []
parallelism = []
no-core-check = []

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false